5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1764_1576.log
== TEST (2019-05-28 15:12:59) 
-- CODE:
from numpy import *

eusap = array(eval(input("digite eusapia: ")))
barsa = array(eval(input("digite barsanulfo: ")))

print(size(eusap))
print('eusap == barsa')



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:13:22) 
-- CODE:
from numpy import *

eusap = array(eval(input("digite eusapia: ")))
barsa = array(eval(input("digite barsanulfo: ")))

print(size(eusap))
print('eusap == barsa')



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:37:49) 
-- CODE:
riafrom numpy import*
Eusapia = array(
Barsanulfo = array(

i = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(i < size(Eusapia) and i < size(Barsanulfo) ):
		if(Eusapia[i] == Barsanulfo[i]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[i] == 33 and Barsanulfo[i] == 22):
			vitoriaEU = vitoEU + 1
		
		elif(Eusapia[i] == 22  and Barsanulfo[i] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[i] == 11 and Barsanulfo[i] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[i] == 33 and Barsanulfo[i] == 11):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[i] == 11 and Barsanulfo[i] == 22):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[i] == 22 and Barsanulfo[i] == 11):
			vitoriaEU = vitoriaEU + 1
		
		i = i + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- ERROR:
File "XXXX", line 1
    riafrom numpy import*
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 15:37:53) 
-- CODE:
riafrom numpy import*
Eusapia = array(
Barsanulfo = array(

i = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(i < size(Eusapia) and i < size(Barsanulfo) ):
		if(Eusapia[i] == Barsanulfo[i]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[i] == 33 and Barsanulfo[i] == 22):
			vitoriaEU = vitoEU + 1
		
		elif(Eusapia[i] == 22  and Barsanulfo[i] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[i] == 11 and Barsanulfo[i] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[i] == 33 and Barsanulfo[i] == 11):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[i] == 11 and Barsanulfo[i] == 22):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[i] == 22 and Barsanulfo[i] == 11):
			vitoriaEU = vitoriaEU + 1
		
		i = i + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- EXECUTION TIME:
0.216417
-- ERROR:
  File "/home/codebench/codes/1764/1576/main.py", line 1
    riafrom numpy import*
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 15:37:55) 
-- CODE:
riafrom numpy import*
Eusapia = array(
Barsanulfo = array(

i = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(i < size(Eusapia) and i < size(Barsanulfo) ):
		if(Eusapia[i] == Barsanulfo[i]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[i] == 33 and Barsanulfo[i] == 22):
			vitoriaEU = vitoEU + 1
		
		elif(Eusapia[i] == 22  and Barsanulfo[i] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[i] == 11 and Barsanulfo[i] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[i] == 33 and Barsanulfo[i] == 11):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[i] == 11 and Barsanulfo[i] == 22):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[i] == 22 and Barsanulfo[i] == 11):
			vitoriaEU = vitoriaEU + 1
		
		i = i + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- EXECUTION TIME:
0.140837
-- ERROR:
  File "/home/codebench/codes/1764/1576/main.py", line 1
    riafrom numpy import*
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 15:37:55) 
-- CODE:
riafrom numpy import*
Eusapia = array(
Barsanulfo = array(

i = 0
vitoriaEU = 0
vitoriaBA = 0 
#condiçao para entrar execultar while : VETORES DO MESMO TAMANHO
if(size(Eusapia) == size(Barsanulfo)): 
	while(i < size(Eusapia) and i < size(Barsanulfo) ):
		if(Eusapia[i] == Barsanulfo[i]): #EMPATE
			vitoriaEU = vitoriaEU
			vitoriaBA = vitoriaBA
		
		elif(Eusapia[i] == 33 and Barsanulfo[i] == 22):
			vitoriaEU = vitoEU + 1
		
		elif(Eusapia[i] == 22  and Barsanulfo[i] == 33):
			vitoriaBA = vitoriaBA + 1
		
		elif(Eusapia[i] == 11 and Barsanulfo[i] == 33):
			vitoriaEU = vitoriaEU + 1
		
		elif(Eusapia[i] == 33 and Barsanulfo[i] == 11):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[i] == 11 and Barsanulfo[i] == 22):
			vitoriaBA = vitoriaBA + 1
			
		elif(Eusapia[i] == 22 and Barsanulfo[i] == 11):
			vitoriaEU = vitoriaEU + 1
		
		i = i + 1

	print(size(Eusapia) or  size(Barsanulfo))	
	if(vitoriaEU == vitoriaBA):
		print("EMPATE")
	elif(vitoriaEU > vitoriaBA):
		print("EUSAPIA")
	elif(vitoriaEU < vitoriaBA):
		print("BARSANULFO")


-- EXECUTION TIME:
0.138004
-- ERROR:
  File "/home/codebench/codes/1764/1576/main.py", line 1
    riafrom numpy import*
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 15:51:42) 
-- CODE:
from numpy import*
a=array(eval(input("")))
b=array(eval(input("")))

i=0
EU=0
BA=0

while(i<size(a)):
    if(a[i]==11 and b[i]==11 or a[i]==22 and b[i]==22 or a[i]==33 and b[i]==33):
        EU=EU+0
        BA=BA+0
    elif(a[i]==11 and b[i]==33 or a[i]==22 and b[i]==11 or a[i]==33 and b[i]==22):
        EU=EU+1
        BA=BA+0
    elif(b[i]==11 and a[i]==33 or b[i]==22 and a[i]==11 or b[i]==33 and a[i]==22):
        EU=EU+0
        BA=BA+1
    i=i+1
print(i)
if(EU==BA):
    print("EMPATE")
if(EU>BA):
    print("EUSAPIA")
elif(EU<BA):
    print("BARSANULFO")
-- EXECUTION TIME:
0.562973
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
